# my_browser

./: Chrome_Security_Audit.md  README.md  SecurityAssessment.md  Security_Fixes_Report.md  enhance_security_version_20260121.md  launch-optimized.sh  meson.build  my_browser
app/: autofill.js  credential_manager.vala  history_dialog.vala  history_manager.vala  main.vala  meson.build  window.vala
docs/: GSTREAMER_QUICKSTART.md  VIDEO_ENHANCEMENT_WALKTHROUGH.md  gstreamer_optimization.md
docs/walkthroughs/: 01_video_playback_performance_fix.md  02_gstreamer_optimization_codec_enhancement.md  03_fixing_deprecation_warnings.md  04_fixing_hyprland_freeze_bug.md  05_readme_security_update.md  06_detailed_code_documentation_update.md  07_chrome_style_history_autocomplete.md  08_dark_theme_and_password_manager_fix.md  09_password_manager_implementation.md  10_browser_implementation.md  README.md
scripts/: install-gstreamer-codecs.sh  test-gstreamer.sh
